compiling the requirement file
