# backend_api/service_api/api_docs/swagger.yaml
@@ -67,12 +67,9 @@ paths:
                   type: string
                 publish_time:
                   type: string
+
       responses:
         "201":
-          description: Acknowledgment response
-          schema:
-            $ref: '#/definitions/Response'
-        "200":
           description: Acknowledgment response
           schema:
             $ref: '#/definitions/Response'
@@ -81,7 +78,120 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 
+  /data/{id}:
+    get:
+      tags:
+       - retrieve
+      operationId: get_by_id
+      summary: Get a data given an id
+      description: given a raw id, data will be returned
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          required: true
+      responses:
+        '200':
+          description: return data
+          schema:
+            $ref: '#/definitions/Data'
+        '404':
+          description: Resource not found
+          schema:
+            $ref: '#/definitions/Error'
+  /data:
+    get:
+      tags:
+       - retrieve
+      operationId: get_by_filter
+      summary: Get a data given page_size and page_number
+      description: return a list of data
+      parameters:
+        - name: page_number
+          in: query
+          type: integer
+          required: false
+        - name: page_size
+          in: query
+          type: integer
+          required: false
+      responses:
+        '200':
+          description: return list of data
+          schema:
+            $ref: '#/definitions/DataList'
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: '#/definitions/Error'
+
+
 definitions:
+
+  Data:
+    type: object
+    properties:
+      id:
+        type: integer
+      serial:
+          type: string
+      application:
+          type: integer
+      time:
+          type: string
+      type:
+          type: string
+      device:
+          type: string
+      v0:
+        type: integer
+      v1:
+        type: number
+      v2:
+        type: number
+      v3:
+        type: number
+      v4:
+        type: number
+      v5:
+        type: number
+      v6:
+        type: number
+      v7:
+        type: number
+      v8:
+        type: number
+      v9:
+        type: number
+      v10:
+        type: number
+      v11:
+        type: number
+      v12:
+        type: number
+      v13:
+        type: number
+      v14:
+        type: number
+      v15:
+        type: number
+      v16:
+        type: number
+      v17:
+        type: number
+      v18:
+        type: number
+      date_created:
+        type: string
+
+  DataList:
+    type: object
+    properties:
+      data_list:
+        type: array
+        items:
+          $ref: '#/definitions/Data'
+
   StatusResponse:
     type: object
     properties:
@@ -94,6 +204,8 @@ definitions:
       status_code:
         type: integer
         format: int32
+      message:
+        type: string
 
   Error:
     type: object
@@ -101,3 +213,5 @@ definitions:
       error_code:
         type: integer
         format: int32
+      message:
+        type: string
