# backend_api/service_api/routes/register_routes.py
@@ -4,3 +4,5 @@ class RegisterRoute:
         pyramid_config.add_route("swagger", "/")
         pyramid_config.add_route("get_status", "/status")
         pyramid_config.add_route("receive_message", "/receive/message")
+        pyramid_config.add_route("get_by_id", "/data/{id}")
+        pyramid_config.add_route("get_by_filter", "/data")
